--- a/primary_data/E3_raw_data_wrangling.Rmd
+++ b/primary_data/E3_raw_data_wrangling.Rmd
@@ -60,16 +60,65 @@ Subset dataset 3B to match musician criteria and stimulus length of dataset 3A.
 
 ```{r}
 # list of subject IDs that match the musician criteria (either >5 years of experience or none at all)
-sub_ids <- c(
-  # non-musicians (n = 10)
-  '377777', '377770', '377747', '377708', '377701',
-  '377692', '377665', '377664', '377663', '393253', 
-  # musicians (n = 13)
+# musicians (n = 13)
+mus_sub_ids <- c(
   '377647', '393320', '393267', '393245', '393246',
   '393242', '393241', '393240', '393230', '393254', 
-  '393252', '393249', '393239'
-  )
+  '393252', '393249', '393239')
+
+# non-musicians (n = 10)
+non_mus_sub_ids <- c(
+  '377777', '377770', '377747', '377708', '377701',
+  '377692', '377665', '377664', '377663', '393253')
 
 subset_3B <- main_3B %>%
   # musician criteria
-  filter(exp_subject_id %in% sub_ids) %>%
+  mutate(Musician = ifelse(exp_subject_id %in% mus_sub_ids, 'Yes',
+                           ifelse(exp_subject_id %in% non_mus_sub_ids, 'No', NA))) %>%
+  relocate(Musician, .after = exp_subject_id) %>%
+  filter(!is.na(Musician)) %>%
+  
+  # stimulus length
+  
+  # remove stimulus 2
+  filter(stim_num != '2') %>%
+
+  # transform response column into timestamp representation
+  # first, remove NA rows
+  filter(!is.na(responses)) %>%
+  # replace 'values=' and " with an empty string
+  mutate(responses = str_replace(responses, 'values=', '')) %>%
+  mutate(responses = str_replace(responses, '"', '')) %>%
+  # give each timestamp its own row
+  separate_longer_delim(responses, delim = ';') %>%
+  filter(responses != '') %>%
+  # convert from milliseconds to seconds
+  mutate(responses = as.numeric(responses) / 1000) %>%
+
+  # subsetting rules:
+  # when stim_num == 1, take all timestamps under 66 seconds
+  filter(!(stim_num == '1' & responses > 66)) %>%
+  # when stim_num == 3, take the last 66 seconds
+  # everything after 16 seconds for Intact (since Intact is 41m/82s)
+  filter(!(stim_num == '3' & scramble == 'Intact' & responses < 16)) %>%
+  # everything after 10 seconds for Intact (since 8B is 38m/76s)
+  filter(!(stim_num == '3' & scramble == '8B' & responses < 10)) %>%
+  # everything after 14 seconds for 2B (since 2B is 40m/80s)
+  filter(!(stim_num == '3' & scramble == '2B' & responses < 14)) %>%
+  # everything after 14 seconds for 1B (since 1B is 40m/80s)
+  filter(!(stim_num == '3' & scramble == '1B' & responses < 14)) %>%
+
+  # adjust timing for stim_num == 3 so it starts at 0 for all conditions  
+  mutate(responses = ifelse(stim_num == 3, ifelse(
+    scramble == 'Intact', responses - 16, ifelse(
+      scramble == '8B', responses - 10, responses - 14
+      )), responses)) %>%
+  # check that nothing is below zero
+  #filter(responses < 0)
+  
+  # rename column for analysis
+  rename(value = responses) %>%
+  
+  # add stimulus set = 1 for when we combine
+  mutate(stimulus_set = 1, .after = Musician)
+```
