--- a/primary_data/E3_raw_data_wrangling.Rmd
+++ b/primary_data/E3_raw_data_wrangling.Rmd
@@ -260,6 +260,12 @@ rate_combined %<>%
          )
 ```
 
+```{r}
+sub_check <- rate_combined %>%
+  select(exp_subject_id) %>%
+  left_join(ref_subs, ., by = join_by('ref_subs' == 'exp_subject_id')) %>%
+  filter(is.na(Musician) | is.na(stimulus_set))
+```
 
 
 ## Timestamps
