Tried dropping NAs...

--- a/primary_data/E3_raw_data_wrangling.Rmd
+++ b/primary_data/E3_raw_data_wrangling.Rmd
@@ -259,7 +259,7 @@ Missing data:
 - has data for 1 condition: 355341, 356778, 361615, 363111 (12)
 - has data for 2 conditions: 354009, 360247 (4)
 - has data for 3 conditions: 334739, 360430, 385662, 393253, 610499 (5)
-This explains the difference between the reference (380 rows) and what I just got (359 rows). Need to compute the means without dropping NAs.
+This explains the difference between the reference (380 rows) and what I just got (359 rows).
 
 
 Make things into factors so we don't have to do it later.
