--- a/E1-E2-E4/scripts/E2_prediction.Rmd
+++ b/E1-E2-E4/scripts/E2_prediction.Rmd
@@ -252,7 +252,11 @@ data1B <- filter(data, scramble == '1B')
 
 ## What if we just look at 8B and 2B?
 
+The main thing here is to see if the interaction we see between group and condition (that we see visually) shows up when we take out 1B. 
 
+```{r}
+data_no1B <- filter(data, scramble != '1B')
+```
 
 \newpage
 
